src/frontend/snapshots/proto__frontend__parser__parser@code_blocks.pr.snap
---
source: src/frontend/parser.rs
expression: res
input_file: src/frontend/parser_inputs/code_blocks.pr
---
module:
  - "fn main () void { let a = 4; { mut b = a; {  } } }"
lexer_error: []
parser_error: []

