src/frontend/snapshots/proto__frontend__parser__parser@conditional_ins.pr.snap
---
source: src/frontend/parser.rs
expression: res
input_file: src/frontend/parser_inputs/conditional_ins.pr
---
module:
  - "fn main () void { mut a = 0; if @platform == \"windows\" { a = 1; } else if @platform == \"linux\" { a = 2; } else if @platform == \"mac\" { a = 3; } else { a = 4; } }"
lexer_error: []
parser_error: []

