src/frontend/snapshots/proto__frontend__parser__parser@consts_and_vars.pr.snap
---
source: src/frontend/parser.rs
expression: res
input_file: src/frontend/parser_inputs/consts_and_vars.pr
---
module:
  - let a i8 = 32;
  - let c = false;
  - let e usize = 0;
  - "fn main () void { mut b = a; mut d = not c; }"
lexer_error: []
parser_error: []

