src/frontend/snapshots/proto__frontend__parser__parser@fn_calls.pr.snap
---
source: src/frontend/parser.rs
expression: res
input_file: src/frontend/parser_inputs/fn_calls.pr
---
module:
  - "let a = add(1, 2);"
  - "sub(420, 300);"
  - "sub(add(1, 2), 3);"
lexer_error: []
parser_error: []

