src/frontend/snapshots/proto__frontend__parser__parser@fn_def.pr.snap
---
source: src/frontend/parser.rs
expression: res
input_file: src/frontend/parser_inputs/fn_def.pr
---
module:
  - "fn add (a i64, b i64) i64 { return a + b; }"
  - "fn do_nothing () void {  }"
  - fn do_nothing_ () void return 1;
  - fn prototype () i64;
lexer_error: []
parser_error: []

