src/frontend/snapshots/proto__frontend__parser__parser@loops.pr.snap
---
source: src/frontend/parser.rs
expression: res
input_file: src/frontend/parser_inputs/loops.pr
---
module:
  - "fn main () void {  }"
  - "fn inf_loop () void { mut sum = 0; mut counter = 0; loop { sum = sum + counter; counter = counter + 1; } }"
  - "fn while_loop () void { mut sum = 0; mut counter = 0; while counter < 10 { sum = sum + counter; } }"
  - "//fn iter_loop() void {"
  - //    mut sum = 0;
  - //    todo when iterators can be implemented as traits
  - "//    foreach counter in 0..10 {"
  - //        sum = sum + counter;
  - "//    }"
  - "//}"
lexer_error: []
parser_error: []

