src/frontend/snapshots/proto__frontend__parser__parser@modules.pr.snap
---
source: src/frontend/parser.rs
expression: res
input_file: src/frontend/parser_inputs/modules.pr
---
module:
  - "pub mod some_fns { pub fn public_fn () void {  } fn private_fn () void {  } }"
  - "mod some_mod { pub fn public_fn () void {  } fn private_fn () void {  } }"
  - "fn main () void { some_fns::public_fn(); some_mod::public_fn(); }"
lexer_error: []
parser_error: []

