src/frontend/snapshots/proto__frontend__parser__parser@structs.pr.snap
---
source: src/frontend/parser.rs
expression: res
input_file: src/frontend/parser_inputs/structs.pr
---
module:
  - // This is a sample for user defined structs
  - // simple struct that uses defaults
  - ":SourceFile { path str, text str = \"\", flat_index usize = 0, col usize = 0, line usize = 0 }"
  - "fn main () void { // since we allow defaults, we can focus on the // members we care about initializing mut src = :SourceFile { path = \"./using_constructor.pr\" }; }"
lexer_error: []
parser_error: []

