src/frontend/snapshots/proto__frontend__parser__parser@type_extension.pr.snap
---
source: src/frontend/parser.rs
expression: res
input_file: src/frontend/parser_inputs/type_extension.pr
---
module:
  - ":Person { name str, age i8 }"
  - "extend Person { pub fn get_name (self Person) str { return name; } pub fn get_age (self Person) i8 { return age; } }"
lexer_error: []
parser_error: []

